--- a/thesis.tex
+++ b/thesis.tex
@@ -12,6 +12,7 @@
 % Frontmatter *******************************************************
 \include{FrontBackmatter/Titlepage}
 \include{FrontBackmatter/Signaturepage}
+\include{FrontBackmatter/Preface}
 \include{FrontBackmatter/Acknowledgments}
 \include{FrontBackmatter/Abstracttitlepage}
 \include{FrontBackmatter/Abstract}
