Add footnotes for chapters

--- a/thesis-config.tex
+++ b/thesis-config.tex
@@ -97,7 +97,7 @@
 \usepackage{xfrac}
 \usepackage{scrhack} % fix warnings when using KOMA with listings package
 \usepackage{xspace} % to get the spacing after macros right
-\usepackage{fixltx2e} % fixes some LaTeX stuff
+% \usepackage{fixltx2e} % fixes some LaTeX stuff
 %\PassOptionsToPackage{printonlyused,smaller}{acronym}
 \PassOptionsToPackage{printonlyused}{acronym}
 	\usepackage{acronym} % nice macros for handling all acronyms in the thesis
