Change "Fig. ~" to "Fig.~"

--- a/thesis-config.tex
+++ b/thesis-config.tex
@@ -107,5 +107,5 @@
 % 6. Load cthesis.sty
 % *********************************************************************************
 % \PassOptionsToPackage{parts}{cthesism}
- \usepackage{cthesism}
-
+\usepackage{cthesism}
+\usepackage{rotating}
