--- a/thesis.tex
+++ b/thesis.tex
@@ -24,8 +24,8 @@
 \pagestyle{useheadings}
 %\part{Glass as a stressed elastic continuum}\label{pt:th}
 %\include{FontTest/fonttest}
+\include{Chapters/chap1/introduction}
 \include{Chapters/chap2/manuscript}
-% \include{Chapters/ch2}
 \include{Chapters/chap3/Manuscript-FINAL}
 % \include{Chapters/ch4}
 % \include{Chapters/ch5}
