Correct bib for uppercase

--- a/Dbib.bib
+++ b/Dbib.bib
@@ -1,8 +1,15 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: UTF8
+@article{QCHEM4,
+Author = {Y. Shao and Z. Gan and E. Epifanovsky and A. T. B. Gilbert and M. Wormit and J. Kussmann and A. W. Lange and A. Behn and J. Deng and X. Feng and D. Ghosh and M. Goldey and P. R. Horn and L. D. Jacobson and I. Kaliman and R. Z. Khaliullin and T. K\'us and A. Landau and J. Liu and E. I. Proynov and Y. M. Rhee and R. M. Richard and M. A. Rohrdanz and R. P. Steele and E. J. Sundstrom and H. L. {Woodcock III} and P. M. Zimmerman and D. Zuev and B. Albrecht and E. Alguire and B. Austin and G. J. O. Beran and Y. A. Bernard and E. Berquist and K. Brandhorst and K. B. Bravaya and S. T. Brown and D. Casanova and C.-M. Chang and Y. Chen and S. H. Chien and K. D. Closser and D. L. Crittenden and M. Diedenhofen and R. A. {DiStasio Jr.} and H. Dop and A. D. Dutoi and R. G. Edgar and S. Fatehi and L. {Fusti-Molnar} and A. Ghysels and A. {Golubeva-Zadorozhnaya} and J. Gomes and M. W. D. {Hanson-Heine} and P. H. P. Harbach and A. W. Hauser and E. G. Hohenstein and Z. C. Holden and T.-C. Jagau and H. Ji and B. Kaduk and K. Khistyaev and J. Kim and J. Kim and R. A. King and P. Klunzinger and D. Kosenkov and T. Kowalczyk and C. M. Krauter and K. U. Lao and A. Laurent and K. V. Lawler and S. V. Levchenko and C. Y. Lin and F. Liu and E. Livshits and R. C. Lochan and A. Luenser and P. Manohar and S. F. Manzer and S.-P. Mao and N. Mardirossian and A. V. Marenich and S. A. Maurer and N. J. Mayhall and C. M. Oana and R. {Olivares-Amaya} and D. P. O'Neill and J. A. Parkhill and T. M. Perrine and R. Peverati and P. A. Pieniazek and A. Prociuk and D. R. Rehn and E. Rosta and N. J. Russ and N. Sergueev and S. M. Sharada and S. Sharmaa and D. W. Small and A. Sodt and T. Stein and D. St\"uck and Y.-C. Su and A. J. W. Thom and T. Tsuchimochi and L. Vogt and O. Vydrov and T. Wang and M. A. Watson and J. Wenzel and A. White and C. F. Williams and V. Vanovschi and S. Yeganeh and S. R. Yost and Z.-Q. You and I. Y. Zhang and X. Zhang and Y. Zhou and B. R. Brooks and G. K. L. Chan and D. M. Chipman and C. J. Cramer and W. A. {Goddard III} and M. S. Gordon and W. J. Hehre and A. Klamt and H. F. {Schaefer III} and M. W. Schmidt and C. D. Sherrill and D. G. Truhlar and A. Warshel and X. Xua and A. {Aspuru-Guzik} and R. Baer and A. T. Bell and N. A. Besley and J.-D. Chai and A. Dreuw and B. D. Dunietz and T. R. Furlani and S. R. Gwaltney and C.-P. Hsu and Y. Jung and J. Kong and D. S. Lambrecht and W. Liang and C. Ochsenfeld and V. A. Rassolov and L. V. Slipchenko and J. E. Subotnik and T. {Van Voorhis} and J. M. Herbert and A. I. Krylov and P. M. W. Gill and M. {Head-Gordon}},
+Journal = {Molecular Physics},
+Pages = {184--215},
+Title = {Advances in molecular quantum chemistry contained in the {Q}-{C}hem 4 program package},
+Volume = {113},
+Year = {2015}}
 
 @article{marcus1956theory,
-  title={On the theory of oxidation-reduction reactions involving electron transfer. I},
+  title={On the theory of oxidation-reduction reactions involving electron transfer. {I}},
   author={Marcus, Rudolph A},
   journal={The Journal of Chemical Physics},
   volume={24},
@@ -13,7 +20,7 @@
 }
 
 @article{marcus1965theory,
-  title={On the theory of electron-transfer reactions. VI. Unified treatment for homogeneous and electrode reactions},
+  title={On the theory of electron-transfer reactions. {VI}. Unified treatment for homogeneous and electrode reactions},
   author={Marcus, Rudolph A},
   journal={The Journal of Chemical Physics},
   volume={43},
@@ -24,7 +31,7 @@
 }
 
 @article{marcus1993electron,
-  title={Electron transfer reactions in chemistry. Theory and experiment},
+  title={Electron transfer reactions in chemistry. {T}heory and experiment},
   author={Marcus, Rudolph A},
   journal={Reviews of Modern Physics},
   volume={65},
@@ -46,7 +53,7 @@
 }
 
 @article{miller1984intramolecular,
-  title={Intramolecular long-distance electron transfer in radical anions. The effects of free energy and solvent on the reaction rates},
+  title={Intramolecular long-distance electron transfer in radical anions. {T}he effects of free energy and solvent on the reaction rates},
   author={Miller, JR and Calcaterra, LT and Closs, GL},
   journal={Journal of the American Chemical Society},
   volume={106},
@@ -57,7 +64,7 @@
 }
 
 @article{subotnik2008constructing,
-  title={Constructing diabatic states from adiabatic states: Extending generalized Mulliken--Hush to multiple charge centers with Boys localization},
+  title={Constructing diabatic states from adiabatic states: Extending generalized {M}ulliken--{H}ush to multiple charge centers with Boys localization},
   author={Subotnik, Joseph E and Yeganeh, Sina and Cave, Robert J and Ratner, Mark A},
   journal={The Journal of Chemical Physics},
   volume={129},
@@ -68,7 +75,7 @@
 }
 
 @article{subotnik2009initial,
-  title={The initial and final states of electron and energy transfer processes: Diabatization as motivated by system-solvent interactions},
+  title={The initial and final states of electron and energy transfer processes: {D}iabatization as motivated by system-solvent interactions},
   author={Subotnik, Joseph E and Cave, Robert J and Steele, Ryan P and Shenvi, Neil},
   journal={The Journal of Chemical Physics},
   volume={130},
@@ -79,7 +86,7 @@
 }
 
 @article{subotnik2010predicting,
-  title={Predicting Accurate Electronic Excitation Transfer Rates via Marcus Theory with Boys or Edmiston- Ruedenberg Localized Diabatization†},
+  title={Predicting Accurate Electronic Excitation Transfer Rates via {M}arcus Theory with {B}oys or {E}dmiston-{R}uedenberg Localized Diabatization†},
   author={Subotnik, Joseph E and Vura-Weis, Josh and Sodt, Alex J and Ratner, Mark A},
   journal={The Journal of Physical Chemistry A},
   volume={114},
@@ -112,7 +119,7 @@
 }
 
 @article{tamura2007exciton,
-  title={Exciton dissociation at donor-acceptor polymer heterojunctions: Quantum nonadiabatic dynamics and effective-mode analysis},
+  title={Exciton dissociation at donor-acceptor polymer heterojunctions: {Q}uantum nonadiabatic dynamics and effective-mode analysis},
   author={Tamura, Hiroyuki and Bittner, Eric R and Burghardt, Irene},
   journal={The Journal of Chemical Physics},
   volume={126},
@@ -132,7 +139,7 @@
 }
 
 @article{singh2009fluorescence,
-  title={Fluorescence depolarization in poly [2-methoxy-5-((2-ethylhexyl) oxy)-1, 4-phenylenevinylene]: Sites versus eigenstates hopping},
+  title={Fluorescence depolarization in poly[2-methoxy-5-((2-ethylhexyl)oxy)-1, 4-phenylenevinylene]: {S}ites versus eigenstates hopping},
   author={Singh, Jaykrishna and Bittner, Eric R and Beljonne, David and Scholes, Gregory D},
   journal={The Journal of Chemical Physics},
   volume={131},
@@ -154,7 +161,7 @@
 }
 
 @article{gindensperger2006shortI,
-  title={Short-time dynamics through conical intersections in macrosystems. I. Theory: Effective-mode formulation},
+  title={Short-time dynamics through conical intersections in macrosystems. {I}. {T}heory: {E}ffective-mode formulation},
   author={Gindensperger, Etienne and Burghardt, Irene and Cederbaum, Lorenz S},
   journal={The Journal of Chemical Physics},
   volume={124},
@@ -165,7 +172,7 @@
 }
 
 @article{gindensperger2006shortII,
-  title={Short-time dynamics through conical intersections in macrosystems. II. Applications},
+  title={Short-time dynamics through conical intersections in macrosystems. {II. Applications}},
   author={Gindensperger, Etienne and Burghardt, Irene and Cederbaum, Lorenz S},
   journal={The Journal of Chemical Physics},
   volume={124},
@@ -198,7 +205,7 @@
 }
 
 @article{closs1988determination,
-  title={Determination of long-distance intramolecular triplet energy-transfer rates. Quantitative comparison with electron transfer},
+  title={Determination of long-distance intramolecular triplet energy-transfer rates. {Q}uantitative comparison with electron transfer},
   author={Closs, Gerhard L and Piotrowiak, Piotr and MacInnis, Jean M and Fleming, Graham R},
   journal={Journal of the American Chemical Society},
   volume={110},
@@ -286,7 +293,7 @@
 
 
 @article{yang2014intramolecular,
-  title={Intramolecular Charge-and Energy-Transfer Rates with Reduced Modes: Comparison to Marcus Theory for Donor--Bridge--Acceptor Systems},
+  title={Intramolecular Charge- and Energy-Transfer Rates with Reduced Modes: {C}omparison to {M}arcus Theory for Donor--Bridge--Acceptor Systems},
   author={Yang, Xunmo and Bittner, Eric R},
   journal={The Journal of Physical Chemistry A},
   volume={118},
