--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -6,33 +6,54 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Abstract}
-Essential microscopic aspects of activated transport in liquids, which
-precedes the glass transition, have evaded explanation for
-decades. These poorly understood aspects include: the molecular
-underpinning of the excess, configurational entropy; the transition
-state configurations for the activated transport; the chemical origin
-of the fragile vs. strong liquid behavior; and many others. This
-dissertation puts forth a radically novel way to address these open
-questions, in which liquids near their glass transition are viewed as
-structurally degenerate assemblies of strongly interacting, local
-sources of frozen-in stress. The thermodynamics and activated barriers
-for rearrangement of this stress field have been mapped onto a
-Heisenberg model with six-dimensional spins. A meanfield analysis of
-the spin model has shown glasses can be viewed as frozen-in patterns
-of shear stress and/or uniform compression/dilation, the two extremes
-corresponding to the strong and fragile behaviors. A self-consistent
-elasticity theory of aperiodic, metastable solids emerges in the
-present analysis; it supersedes the traditional elasticity theory,
-which fails to self-consistently account for the structural degeneracy
-stemming from the inherent mismatch between cohesive forces and steric
-repulsion.  The observable elastic constants self-consistently emerge
-in the present theory similarly to how the dielectric susceptibility
-is determined by the properties of molecular dipoles. First
-simulations of the spin model have been carried out. In addition to
-direct observations of transition states for the activated transport,
-several key features of the glass transition are yielded by the spin
-model, including a strongly non-exponential, non-Arrhenius character
-of the relaxations and its correlation with the Poisson ratio of the
-substance.
-\endgroup			
+% Essential microscopic aspects of activated transport in liquids, which
+% precedes the glass transition, have evaded explanation for
+% decades. These poorly understood aspects include: the molecular
+% underpinning of the excess, configurational entropy; the transition
+% state configurations for the activated transport; the chemical origin
+% of the fragile vs. strong liquid behavior; and many others. This
+% dissertation puts forth a radically novel way to address these open
+% questions, in which liquids near their glass transition are viewed as
+% structurally degenerate assemblies of strongly interacting, local
+% sources of frozen-in stress. The thermodynamics and activated barriers
+% for rearrangement of this stress field have been mapped onto a
+% Heisenberg model with six-dimensional spins. A meanfield analysis of
+% the spin model has shown glasses can be viewed as frozen-in patterns
+% of shear stress and/or uniform compression/dilation, the two extremes
+% corresponding to the strong and fragile behaviors. A self-consistent
+% elasticity theory of aperiodic, metastable solids emerges in the
+% present analysis; it supersedes the traditional elasticity theory,
+% which fails to self-consistently account for the structural degeneracy
+% stemming from the inherent mismatch between cohesive forces and steric
+% repulsion.  The observable elastic constants self-consistently emerge
+% in the present theory similarly to how the dielectric susceptibility
+% is determined by the properties of molecular dipoles. First
+% simulations of the spin model have been carried out. In addition to
+% direct observations of transition states for the activated transport,
+% several key features of the glass transition are yielded by the spin
+% model, including a strongly non-exponential, non-Arrhenius character
+% of the relaxations and its correlation with the Poisson ratio of the
+% substance.
+We present a new, fully {\em ab initio} approach for computing intramolecular charge and
+energy transfer rates.  Using a time-convolutionless master equation approach and parameterized
+using couplings obtained using an accurate quantum chemical approach, we  benchmark the approach
+against  experimental results and Marcus theory rates for triplet energy transfer for a
+series of donor-bridge-acceptor systems.
+An important component of our analysis is the use of a projection operator scheme
+that parses out specific internal nuclear motions that accompany
+the electronic transition.
+Using an iterative Lanczos approach, we  concentrate the coupling between the electronic and nuclear
+degrees of freedom into a small number of reduced harmonic modes.
+We find that  using only a single reduced mode--termed the ``primary mode'' or ``Lanczos modes'',
+ one obtains an accurate evaluation of the golden-rule rate constant and
+insight into the nuclear motions responsible for coupling the initial and final electronic states.
+
+In particular, the irreducible representation of the primary mode reveals
+hidden details of the dynamics. For the cases considered here, the primary modes belong to totally symmetric irreducible representations  of
+the donor and acceptor moieties. Upon investigating the molecular geometry changes following  the transition,   we propose that the electronic transition process can be
+broken into two steps, in the agreement of Born-Oppenheimer approximation:  a fast excitation transfer occurs, facilitated by the ``primary Lanczos mode'' (PLM),
+followed by slow nuclear relaxation on the final electronic diabatic surface.
+
+We apply the method to a larger, ``star'' molecule, which has been shown experimentally that its exciton transfer pathway can be dramatically modified by mode-specific infrared excitation of vibrations. THe primary mode and rate constants we obtain generally agree with the experiments.
+\endgroup
 \vfill
