--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -6,29 +6,38 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
-I would like to express my sincere gratitude to Vas Lubchenko, whose
-support often extended well beyond of what is normally required from
-the graduate advisor. I am also thankful to him for very careful,
-critical, and multiple reading of this manuscript which greatly
-contributed to its quality.  This work would not be possible without
-help of my family: my parents, my wife, and my son.  I am
-deeply grateful to Eric R. Bittner who, by being such a wonderful
-graduate advisor to my wife, made an inconspicuous, but very important,
-influence on everything I did. I also would like to thank to Anne Goj,
-Jon Golden, Pyotr Rabochiy, and other members of Bittner and
-Lubchenko's groups who made this place such a nice professional
-home. I am indebted to Elena and Phil Motuzko for helping me in the
-time of need. Last but not least, I thank Sergei Lukyanets without
-whom I would never became a scientist.
+% I would like to express my sincere gratitude to Vas Lubchenko, whose
+% support often extended well beyond of what is normally required from
+% the graduate advisor. I am also thankful to him for very careful,
+% critical, and multiple reading of this manuscript which greatly
+% contributed to its quality.  This work would not be possible without
+% help of my family: my parents, my wife, and my son.  I am
+% deeply grateful to Eric R. Bittner who, by being such a wonderful
+% graduate advisor to my wife, made an inconspicuous, but very important,
+% influence on everything I did. I also would like to thank to Anne Goj,
+% Jon Golden, Pyotr Rabochiy, and other members of Bittner and
+% Lubchenko's groups who made this place such a nice professional
+% home. I am indebted to Elena and Phil Motuzko for helping me in the
+% time of need. Last but not least, I thank Sergei Lukyanets without
+% whom I would never became a scientist.
 
-The numerical part of this work was completed using TLC2 HPC
-facility of the University of Houston and Ares cluster of the Texas
-Southern University. I am especially indebted to C. J. Tymczak for
-providing the access to the latter.
+% The numerical part of this work was completed using TLC2 HPC
+% facility of the University of Houston and Ares cluster of the Texas
+% Southern University. I am especially indebted to C. J. Tymczak for
+% providing the access to the latter.
 
-I also gratefully acknowledge support by the Donors of the ACS Petroleum
-Research Fund, the Arnold and Mabel Beckman Foundation, the Welch
-Foundation Grant E-1765, and the NSF Grant CHE 0956127.
+% I also gratefully acknowledge support by the Donors of the ACS Petroleum
+% Research Fund, the Arnold and Mabel Beckman Foundation, the Welch
+% Foundation Grant E-1765, and the NSF Grant CHE 0956127.
+I would like to offer my sincere gratitude to my thesis comittee, Prof. Eric R. Bittner, Prof. Vassiliy Lubchenko, Prof. Shoujun Xu, Prof. Don Coltart, and Prof. Gila Stein for serving my committee and their help.
+
+I would like to express my deepest gratitude to my advisor Prof. Eric Bittner for the continuous guidance and support of my Ph.D study and related research, especially for his patience and tolerance. I learn and research in a bit uncommon way. Without his tolerance, I could not have finished my Ph.D study.
+
+I would like to thank my fellow labmates: Allen Kelly, Svitlana Zaster, Hao Li, Kush Patel, Vladimir Lankevich, and Robert Paradez. They, especially Allen, helped me a lot to adapt to the new life here. I would like to thank Dmytro Bavzenko for his pretty thesis template.
+
+I would like to express my gratitude to many great men in human history: Einstein, Darwin, Turing, Feynman, Hayek... The list is long. They are heroes in my heart. Bearing their thoughts and stories in mind, I never feel alone.
+
+Last but not least, I would like to thank my mother, for the nurture and support she give me in so many years. I am indebted to her. Although she cannot understand my research - even a little bit, this thesis is for her.
 \endgroup
 
 
