--- a/Dbib.bib
+++ b/Dbib.bib
@@ -303,3 +303,247 @@ Year = {2015}}
   publisher={ACS Publications}
 }
 
+
+
+@article{ulstrup1975effect,
+  title={The effect of intramolecular quantum modes on free energy relationships for electron transfer reactions},
+  author={Ulstrup, Jens and Jortner, Joshua},
+  journal={The Journal of Chemical Physics},
+  volume={63},
+  number={10},
+  pages={4358--4368},
+  year={1975},
+  publisher={AIP Publishing}
+}
+
+@article{schrauben2010vibrational,
+  title={Vibrational coherence in the excited state dynamics of Cr (acac) 3: probing the reaction coordinate for ultrafast intersystem crossing},
+  author={Schrauben, Joel N and Dillman, Kevin L and Beck, Warren F and McCusker, James K},
+  journal={Chemical Science},
+  volume={1},
+  number={3},
+  pages={405--410},
+  year={2010},
+  publisher={Royal Society of Chemistry}
+}
+
+@article{davis2009effect,
+  title={On the effect of nuclear bridge modes on donor--acceptor electronic coupling in donor--bridge--acceptor molecules},
+  author={Davis, Daly and Toroker, Maytal Caspary and Speiser, Shammai and Peskin, Uri},
+  journal={Chemical Physics},
+  volume={358},
+  number={1},
+  pages={45--51},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{devault1980quantum,
+  title={Quantum mechanical tunnelling in biological systems},
+  author={Devault, Don},
+  journal={Quarterly Reviews of Biophysics},
+  volume={13},
+  number={04},
+  pages={387--564},
+  year={1980},
+  publisher={Cambridge Univ Press}
+}
+
+@article{gray1996electron,
+  title={Electron transfer in proteins},
+  author={Gray, Harry B and Winkler, Jay R},
+  journal={Annual Review of Biochemistry},
+  volume={65},
+  pages={537--561},
+  year={1996}
+}
+
+@article{lewis2002donor,
+  title={Donor-bridge-acceptor energetics determine the distance dependence of electron tunneling in DNA},
+  author={Lewis, Frederick D and Liu, Jianqin and Weigel, Wilfried and Rettig, Wolfgang and Kurnikov, Igor V and Beratan, David N},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={99},
+  number={20},
+  pages={12536--12541},
+  year={2002},
+  publisher={National Acad Sciences}
+}
+
+@article{bressler2009femtosecond,
+  title={Femtosecond XANES study of the light-induced spin crossover dynamics in an iron (II) complex},
+  author={Bressler, Ch and Milne, C and Pham, V-T and ElNahhas, A and Van der Veen, RM and Gawelda, W and Johnson, S and Beaud, P and Grolimund, D and Kaiser, M and others},
+  journal={Science},
+  volume={323},
+  number={5913},
+  pages={489--492},
+  year={2009},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{shih2008tryptophan,
+  title={Tryptophan-accelerated electron flow through proteins},
+  author={Shih, Crystal and Museth, Anna Katrine and Abrahamsson, Malin and Blanco-Rodriguez, Ana Maria and Di Bilio, Angel J and Sudhamsu, Jawahar and Crane, Brian R and Ronayne, Kate L and Towrie, Mike and Vl{\v{c}}ek, Anton{\'\i}n and others},
+  journal={Science},
+  volume={320},
+  number={5884},
+  pages={1760--1762},
+  year={2008},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{repp2010coherent,
+  title={Coherent electron-nuclear coupling in oligothiophene molecular wires},
+  author={Repp, Jascha and Liljeroth, Peter and Meyer, Gerhard},
+  journal={Nature Physics},
+  volume={6},
+  number={12},
+  pages={975--979},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
+@article{halpin2014two,
+  title={Two-dimensional spectroscopy of a molecular dimer unveils the effects of vibronic coupling on exciton coherences},
+  author={Halpin, Alexei and Johnson, Philip JM and Tempelaar, Roel and Murphy, R Scott and Knoester, Jasper and Jansen, Thomas LC and Miller, RJ Dwayne},
+  journal={Nature Chemistry},
+  volume={6},
+  number={3},
+  pages={196--201},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+@article{soler2014signature,
+  title={Signature of nonadiabatic coupling in excited-state vibrational modes},
+  author={Soler, Miguel A and Nelson, Tammie and Roitberg, Adrian E and Tretiak, Sergei and Fernandez-Alberti, Sebastian},
+  journal={The Journal of Physical Chemistry A},
+  volume={118},
+  number={45},
+  pages={10372--10379},
+  year={2014},
+  publisher={ACS Publications}
+}
+
+@article{skourtis2004inelastic,
+  title={Inelastic electron tunneling erases coupling-pathway interferences},
+  author={Skourtis, Spiros S and Waldeck, David H and Beratan, David N},
+  journal={The Journal of Physical Chemistry B},
+  volume={108},
+  number={40},
+  pages={15511--15518},
+  year={2004},
+  publisher={ACS Publications}
+}
+
+@article{xiao2009turning,
+  title={Turning charge transfer on and off in a molecular interferometer with vibronic pathways},
+  author={Xiao, Dequan and Skourtis, Spiros S and Rubtsov, Igor V and Beratan, David N},
+  journal={Nano Letters},
+  volume={9},
+  number={5},
+  pages={1818--1823},
+  year={2009},
+  publisher={ACS Publications}
+}
+
+@article{beratan2009steering,
+  title={Steering electrons on moving pathways},
+  author={Beratan, David N and Skourtis, Spiros S and Balabin, Ilya A and Balaeff, Alexander and Keinan, Shahar and Venkatramani, Ravindra and Xiao, Dequan},
+  journal={Accounts of Chemical Research},
+  volume={42},
+  number={10},
+  pages={1669--1678},
+  year={2009},
+  publisher={ACS Publications}
+}
+
+@article{antoniou2015vibrational,
+  title={Vibrational control of electron-transfer reactions: a feasibility study for the fast coherent transfer regime},
+  author={Antoniou, P and Ma, Z and Zhang, P and Beratan, David N and Skourtis, SS},
+  journal={Physical Chemistry Chemical Physics},
+  volume={17},
+  number={46},
+  pages={30854--30866},
+  year={2015},
+  publisher={Royal Society of Chemistry}
+}
+
+@article{delor2014toward,
+  title={Toward control of electron transfer in donor-acceptor molecules by bond-specific infrared excitation},
+  author={Delor, Milan and Scattergood, Paul A and Sazanovich, Igor V and Parker, Anthony W and Greetham, Gregory M and Meijer, Anthony JHM and Towrie, Michael and Weinstein, Julia A},
+  journal={Science},
+  volume={346},
+  number={6216},
+  pages={1492--1495},
+  year={2014},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{delor2015mechanism,
+  title={On the mechanism of vibrational control of light-induced charge transfer in donor--bridge--acceptor assemblies},
+  author={Delor, Milan and Keane, Theo and Scattergood, Paul A and Sazanovich, Igor V and Greetham, Gregory M and Towrie, Michael and Meijer, Anthony JHM and Weinstein, Julia A},
+  journal={Nature Chemistry},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@article{scattergood2014electron,
+  title={Electron transfer dynamics and excited state branching in a charge-transfer platinum (ii) donor--bridge-acceptor assembly},
+  author={Scattergood, Paul A and Delor, Milan and Sazanovich, Igor V and Bouganov, Oleg V and Tikhomirov, Sergei A and Stasheuski, Alexander S and Parker, Anthony W and Greetham, Gregory M and Towrie, Michael and Davies, E Stephen and others},
+  journal={Dalton Transactions},
+  volume={43},
+  number={47},
+  pages={17677--17693},
+  year={2014},
+  publisher={Royal Society of Chemistry}
+}
+
+@article{yang2015computing,
+  title={Computing intramolecular charge and energy transfer rates using optimal modes},
+  author={Yang, Xunmo and Bittner, Eric R},
+  journal={The Journal of Chemical Physics},
+  volume={142},
+  number={24},
+  pages={244114},
+  year={2015},
+  publisher={AIP Publishing}
+}
+
+@article{cave1996generalization,
+  title={Generalization of the Mulliken-Hush treatment for the calculation of electron transfer matrix elements},
+  author={Cave, Robert J and Newton, Marshall D},
+  journal={Chemical physics letters},
+  volume={249},
+  number={1},
+  pages={15--19},
+  year={1996},
+  publisher={Elsevier}
+}
+
+@article{cave1997calculation,
+  title={Calculation of electronic coupling matrix elements for ground and excited state electron transfer reactions: comparison of the generalized Mulliken--Hush and block diagonalization methods},
+  author={Cave, Robert J and Newton, Marshall D},
+  journal={The Journal of chemical physics},
+  volume={106},
+  number={22},
+  pages={9213--9226},
+  year={1997},
+  publisher={AIP Publishing}
+}
+
+@misc{g09,
+author="M. J. Frisch and G. W. Trucks and H. B. Schlegel and G. E. Scuseria and M. A. Robb and J. R. Cheeseman and G. Scalmani and V. Barone and B. Mennucci and G. A. Petersson and H. Nakatsuji and M. Caricato and X. Li and H. P. Hratchian and A. F. Izmaylov and J. Bloino and G. Zheng and J. L. Sonnenberg and M. Hada and M. Ehara and K. Toyota and R. Fukuda and J. Hasegawa and M. Ishida and T. Nakajima and Y. Honda and O. Kitao and H. Nakai and T. Vreven and Montgomery, {Jr.}, J. A. and J. E. Peralta and F. Ogliaro and M. Bearpark and J. J. Heyd and E. Brothers and K. N. Kudin and V. N. Staroverov and R. Kobayashi and J. Normand and K. Raghavachari and A. Rendell and J. C. Burant and S. S. Iyengar and J. Tomasi and M. Cossi and N. Rega and J. M. Millam and M. Klene and J. E. Knox and J. B. Cross and V. Bakken and C. Adamo and J. Jaramillo and R. Gomperts and R. E. Stratmann and O. Yazyev and A. J. Austin and R. Cammi and C. Pomelli and J. W. Ochterski and R. L. Martin and K. Morokuma and V. G. Zakrzewski and G. A. Voth and P. Salvador and J. J. Dannenberg and S. Dapprich and A. D. Daniels and Ö. Farkas and J. B. Foresman and J. V. Ortiz and J. Cioslowski and D. J. Fox",
+title="Gaussian 09 {R}evision {E}.01",
+note="Gaussian Inc. Wallingford CT 2009"
+}
+
+@article{lu2012multiwfn,
+  title={Multiwfn: a multifunctional wavefunction analyzer},
+  author={Lu, Tian and Chen, Feiwu},
+  journal={Journal of Computational Chemistry},
+  volume={33},
+  number={5},
+  pages={580--592},
+  year={2012},
+  publisher={Wiley Online Library}
+}
