--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -54,6 +54,6 @@ the donor and acceptor moieties. Upon investigating the molecular geometry chang
 broken into two steps, in the agreement of Born-Oppenheimer approximation:  a fast excitation transfer occurs, facilitated by the ``primary Lanczos mode'' (PLM),
 followed by slow nuclear relaxation on the final electronic diabatic surface.
 
-We apply the method to a larger, ``star'' molecule, which has been shown experimentally that its exciton transfer pathway can be dramatically modified by mode-specific infrared excitation of vibrations. THe primary mode and rate constants we obtain generally agree with the experiments.
+We apply the method to a larger, ``star'' molecule, which has been experimentally shown  that its exciton transfer pathway can be radically modified by mode-specific infrared excitation of vibrations. The primary mode and rate constants we obtain generally agree with the experiments.
 \endgroup
 \vfill
