--- a/thesis-config.tex
+++ b/thesis-config.tex
@@ -39,6 +39,7 @@
 % \bibliography{\string$BIBDIR/Dbib}%$
 \usepackage[sort&compress,numbers]{natbib}
 \usepackage{hyperref}
+\usepackage{notoccite}
 % \usepackage{chapterbib}
 % \newcommand{\chapterbib}{
 %   \bibliographystyle{chicago}
@@ -82,6 +83,7 @@
 % 4. Setup floats: tables, (sub)figures, and captions
 % *********************************************************************************
 \usepackage{graphicx}
+\usepackage{adjustbox}
 \setkeys{Gin}{width=.6\textwidth}
 \usepackage{tabularx} % better tables
 \usepackage{ctable}
