--- a/thesis.tex
+++ b/thesis.tex
@@ -26,7 +26,7 @@
 \include{Chapters/chap1/introduction}
 \include{Chapters/chap2/manuscript}
 \include{Chapters/chap3/Manuscript-FINAL}
-% \include{Chapters/ch4}
+\include{Chapters/chap4/chap4}
 % \include{Chapters/ch5}
 % ********************************************************************
 % Backmatter *******************************************************
