--- a/Dbib.bib
+++ b/Dbib.bib
@@ -512,7 +512,7 @@ Year = {2015}}
 @article{cave1996generalization,
   title={Generalization of the Mulliken-Hush treatment for the calculation of electron transfer matrix elements},
   author={Cave, Robert J and Newton, Marshall D},
-  journal={Chemical physics letters},
+  journal={Chemical Physics Letters},
   volume={249},
   number={1},
   pages={15--19},
@@ -523,7 +523,7 @@ Year = {2015}}
 @article{cave1997calculation,
   title={Calculation of electronic coupling matrix elements for ground and excited state electron transfer reactions: comparison of the generalized Mulliken--Hush and block diagonalization methods},
   author={Cave, Robert J and Newton, Marshall D},
-  journal={The Journal of chemical physics},
+  journal={The Journal of Chemical Physics},
   volume={106},
   number={22},
   pages={9213--9226},
@@ -546,4 +546,13 @@ note="Gaussian Inc. Wallingford CT 2009"
   pages={580--592},
   year={2012},
   publisher={Wiley Online Library}
+}
+
+@book{domcke2004conical,
+  title={Conical intersections: electronic structure, dynamics and spectroscopy},
+  author={Domcke, Wolfgang and Yarkony, David R and Horst, K{\~A} and others},
+  volume={15},
+  year={2004},
+  publisher={World Scientific}
+  pages={175}
 }
