--- a/thesis-config.tex
+++ b/thesis-config.tex
@@ -116,3 +116,21 @@
 % \PassOptionsToPackage{parts}{cthesism}
 \usepackage{cthesism}
 \usepackage{rotating}
+\usepackage{enumitem}
+\usepackage{listings}
+\lstset{language=Mathematica, showstringspaces=false}
+\lstset{basicstyle={\sffamily\footnotesize},
+  % numbers=left,
+  % numberstyle=\tiny\color{gray},
+  % numbersep=5pt,
+  breaklines=true,
+  captionpos={t},
+  frame={lines},
+  rulecolor=\color{black},
+  framerule=0.5pt,
+  columns=flexible,
+  tabsize=2,
+  mathescape,
+  commentstyle=\color{gray}
+}
+\usepackage[toc,page]{appendix}
