--- a/thesis.tex
+++ b/thesis.tex
@@ -27,14 +27,14 @@
 \include{Chapters/chap2/manuscript}
 \include{Chapters/chap3/Manuscript-FINAL}
 \include{Chapters/chap4/chap4}
-% \include{Chapters/ch5}
 % ********************************************************************
 % Backmatter *******************************************************
-\appendix
-% \include{Chapters/appGT}
-% \include{Chapters/appEshelby}
-% \include{Chapters/appGI}
-% \include{Chapters/appSamples} %
+\begin{appendices}
+\include{Chapters/Appendix/codes}
+\include{Chapters/Appendix/MOptchem}
+\include{Chapters/Appendix/MERQchem}
+\include{Chapters/Appendix/PTZopt}
+\end{appendices}
 % ********************************************************************
 % Other Stuff in the Back
 % *******************************************************
